<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:id="@+id/settings_about_holder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_about_title"
                style="@style/TitleTextStyle"/>

        <TextView
                android:id="@+id/settings_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_about"
                android:drawableStart="@mipmap/ic_launcher_round"
                android:drawablePadding="8dp"
                style="@style/AboutTextStyle"/>

        <TextView
                android:id="@+id/settings_about_usage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/txt_about_use"
                style="@style/AboutTextStyle"/>

        <TextView
                android:id="@+id/settings_about_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_version"
                style="@style/AboutTextStyle"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_endy_rubbin"
                style="@style/AboutTextStyle"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>