<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:id="@+id/settings_debug_holder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/settings_debug_switch"
            app:layout_constraintBottom_toTopOf="@id/settings_debug_switch"
            app:layout_constraintStart_toStartOf="parent">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_disable_developer_mode_title"
                style="@style/TitleTextStyle"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_disable_developer_mode_subtitle"
                style="@style/SubtitleTextStyle"/>
    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/settings_debug_switch"
            android:layout_marginEnd="16dp"
            style="@style/SwitchStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/settings_debug_holder"
            app:layout_constraintBottom_toBottomOf="@id/settings_debug_holder"
            app:layout_constraintTop_toTopOf="@id/settings_debug_holder"/>

    <View style="@style/DividerStyle"
          android:id="@+id/settings_debug_divider"
          app:layout_constraintTop_toBottomOf="@id/settings_debug_holder"
          app:layout_constraintBottom_toTopOf="@+id/settings_debug_activity_holder"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
            android:id="@+id/settings_debug_activity_holder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:background="?android:attr/selectableItemBackground"
            app:layout_constraintTop_toBottomOf="@id/settings_debug_holder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/txt_debug_car_activity_title"
                style="@style/TitleTextStyle"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/txt_debug_car_activity_subtitle"
                style="@style/SubtitleTextStyle"/>

        <View style="@style/DividerStyle"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>