<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:id="@+id/settings_sidebar_holder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/settings_sidebar_switch"
            app:layout_constraintStart_toStartOf="parent">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_enable_sidebar_title"
                style="@style/TitleTextStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_enable_sidebar_subtitle"
                style="@style/SubtitleTextStyle"/>

    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/settings_sidebar_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            style="@style/SwitchStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/settings_sidebar_holder"
            app:layout_constraintBottom_toBottomOf="@id/settings_sidebar_holder"
            app:layout_constraintTop_toTopOf="@id/settings_sidebar_holder"/>

    <TextView
            android:id="@+id/settings_sidebar_dropdown_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_choose_startup_screen"
            style="@style/TitleTextStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_sidebar_holder"/>

    <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/settings_sidebar_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SpinnerStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_sidebar_dropdown_title"/>

</androidx.constraintlayout.widget.ConstraintLayout>